styles.css
@font-face {
  font-family: digital7MonoItalic;
  src: url(digital-7-font/Digital7Monoitalic-8MDLJ.ttf);
}

body {
  margin: 0px;
  padding: 0px;
}

.container {
  display: flex;
  height: 100vh;
  width: 100vw;
  justify-content: center;
  align-items: center;
  background: #ff5e5b;
}

.calculator {
  width: 500px;
  height: 600px;
  border: 3px solid black;
  border-radius: 5px;
  padding: 5px;
  display: flex;
  gap: 5px;
  flex-direction: column;
  background: #d8d8d8;
}

.display {
  flex: 1 1 0;
  background: #ffffea;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  padding: 5px;
  font-size: 100px;
  font-family: digital7MonoItalic;
  border-radius: 3px;
}

.buttons {
  flex: 4 1 0;
  display: flex;
  flex-wrap: wrap;
  gap: 5px;
  border-radius: 5px;
}

.buttons > button {
  background: #ffffea;
  flex: 1 1 auto;
  height: 24%;
  width: 24%;
  font-size: 40px;
  font-weight: bold;
  color: black;
  font-family: arial;
  border: 2px black solid;
  border-radius: 5px;
}

.buttons > button:hover {
  filter: brightness(95%);
}

.buttons > button:active {
  box-shadow: inset 0px 0px 10px #c1c1c1;
  outline: none;
  filter: brightness(93%);
}

button.operator {
  background: #00cecb;
  font-size: 70px;
  display: table-cell;
  vertical-align: middle;
}

#equals {
  background: #ffed66;
  font-size: 70px;
}

